# template_basic_python

./: LICENSE  README.md  pyproject.toml
learn/: learn_dict.py  learn_list.py  learn_pandas.py
notebooks/: learning_list.ipynb
tests/: test_dict.py  test_list.py  test_pandas.py
