[tool.poetry]
name = "learn"
version = "0.1.0"
description = "Basic template repository for python classroom for Tuong group students."
authors = ["Zewen Kelvin Tuong <z.tuong@uq.edu.au>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "learn" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
